<resources>
    <string name="app_name">Pos-Cashier</string>
    <string name="cart">Cart</string>
    <string name="no_connection">No Internet Connection,Check Your connection or try again</string>
    <string name="title_activity_splashscreen">Splashscreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="intro">Pos-Cashier</string>
    <string name="rights">Developed by Dele Tech</string>
    <string name="try_again">Try Again</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1">1</string>
    <string name="discount">Discount:</string>
    <string name="number_of_items">Quantity:</string>
    <string name="_0">0</string>
    <string name="value_add_tax">VAT%:</string>
    <string name="oksh">OKsh</string>
    <string name="product">Product</string>
    <string name="mpesa">mpesa</string>
    <string name="cash">cash</string>
    <string name="credit">credit</string>
    <string name="_0ksh">0Ksh</string>
    <string name="oops_something_went_wrong_please_try_again_later">Oops,something went wrong. Please try again Later</string>
    <string name="swipe_down_to_refresh">Click to Refresh</string>
    <string name="swipe_down_to_refresh_a">swipe down to Refresh</string>
    <string name="add_items_to_cart">Add Items to Receipt</string>
    <string name="no_pending_mpesa_transactions">No Pending Mpesa Transactions</string>
    <string name="guest">guest</string>
    <string name="guest2020">guest2020</string>
    <string name="loading">Saving Receipt Please wait</string>
    <string name="add_to_receipt">Add To Receipt</string>
    <string name="save_receipt">Save Receipt</string>
    <string name="save">Saving Receipt,Please wait!</string>
</resources>